--- a/templates/webresources/README.md/1.md
+++ b/templates/webresources/README.md/1.md
@@ -1,26 +1,26 @@
-**Install**
-NodeJS https://nodejs.org/en/
-dotnet https://dotnet.microsoft.com/download
-nuget https://docs.microsoft.com/en-us/nuget/install-nuget-client-tools
-NB: Add nuget to path as per above doco
+# Webresources Template
+## Install
+- NodeJS https://nodejs.org/en/
+- dotnet https://dotnet.microsoft.com/download
+- nuget https://docs.microsoft.com/en-us/nuget/install-nuget-client-tools (add nuget to path as per doco)
 
-**Install Global NPM Requirements**
+## Install Global NPM Requirements
 npm install -g typescript jest webpack webpack-cli
 
-**To generate template**
+## Generate template
 run run-once.ps1
 
-**Prep** 
+## Prep 
 1. Open folder in VS Code
 2. Open up the task explorer
 3. If "run-once.ps1" has not been run - run install
 4. Run "generate typings"
 
-**Development**
+## Development
 - Code is in .ts files
 - Located in the src files
 - Code will auto populate with the attributes/views etc.
 
-**Building and Deployment**
+## Building and Deployment
 1. Task Explorer - vscode -> build-deploy dev to build the dev file and deploy it into the dev environment
 2. The file will end up called cld_library.js. In the DEV version, it will contain the code that will allow debugging as the .ts file
