--- a/templates/webresources/README.md/1.md
+++ b/templates/webresources/README.md/1.md
@@ -23,4 +23,4 @@ run run-once.ps1
 
 ## Building and Deployment
 1. Task Explorer - vscode -> build-deploy dev to build the dev file and deploy it into the dev environment
-2. The file will end up called cld_library.js. In the DEV version, it will contain the code that will allow debugging as the .ts file
+2. The file will end up called PREFIX_library.js. In the DEV version, it will contain the code that will allow debugging as the .ts file
